--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
