--- a/env/.env
+++ b/env/.env
@@ -1,6 +1,6 @@
 //Variables de entorno para la base de datos
 
 DB_HOST = localhost
-DB_USER = alejandro
+DB_USER = root
 DB_PASSWORD = 
-DB_DATABASE = WorkIT
+DB_DATABASE = work_it
